--- a/config/database.yml
+++ b/config/database.yml
@@ -16,7 +16,7 @@ production:
   database: db/production.sqlite3
 
 production:
-  adapter: postgresql
+  adapter: sqlite3
   encoding: unicode
   database: production
   host: <%= ENV['DATABASE_HOST'] %>
